wxc/include/ewxw/wxc_glue.h

/* wxFontData */
TClassDefExtend(wxFontData,wxObject)
TClass(wxFontData) wxFontData_Create(  );
void       wxFontData_Delete( TSelf(wxFontData) _obj );
void       wxFontData_EnableEffects( TSelf(wxFontData) _obj, TBool flag );
TBool      wxFontData_GetAllowSymbols( TSelf(wxFontData) _obj );
void       wxFontData_GetChosenFont( TSelf(wxFontData) _obj, TClassRef(wxFont) ref );
void       wxFontData_GetColour( TSelf(wxFontData) _obj, TClassRef(wxColour) _ref );
TBool      wxFontData_GetEnableEffects( TSelf(wxFontData) _obj );
int        wxFontData_GetEncoding( TSelf(wxFontData) _obj );
void       wxFontData_GetInitialFont( TSelf(wxFontData) _obj, TClassRef(wxFont) ref );
int        wxFontData_GetShowHelp( TSelf(wxFontData) _obj );
void       wxFontData_SetAllowSymbols( TSelf(wxFontData) _obj, TBool flag );
void       wxFontData_SetChosenFont( TSelf(wxFontData) _obj, TClass(wxFont) font );
void       wxFontData_SetColour( TSelf(wxFontData) _obj, TClass(wxColour) colour );
void       wxFontData_SetEncoding( TSelf(wxFontData) _obj, int encoding );
void       wxFontData_SetInitialFont( TSelf(wxFontData) _obj, TClass(wxFont) font );
void       wxFontData_SetRange( TSelf(wxFontData) _obj, int minRange, int maxRange );
void       wxFontData_SetShowHelp( TSelf(wxFontData) _obj, TBool flag );